--- a/build.gradle
+++ b/build.gradle
@@ -14,12 +14,13 @@ buildscript {
     }
 }
 
-version "1.8.3"
+version "1.8.5"
 group "streama"
 
 
 apply plugin:"eclipse"
 apply plugin:"idea"
+//apply plugin: "war"
 apply plugin:"org.grails.grails-web"
 apply plugin:"org.grails.grails-gsp"
 apply plugin:"asset-pipeline"
@@ -92,7 +93,7 @@ dependencies {
     // custom
     console "org.grails:grails-console"
     profile "org.grails.profiles:angular"
-    
+
     // test
     testCompile "org.grails:grails-plugin-testing"
     testCompile "org.grails.plugins:geb"
