--- a/bin/application.yml
+++ b/bin/application.yml
@@ -16,17 +16,17 @@ environments:
     development:
         dataSource:
             dbCreate: update
-            driverClassName:  'com.mysql.cj.jdbc.Driver'
-            url: jdbc:mysql://localhost/pickflix
-            username: csilva
-            password: Newpwd&11894
+            driverClassName:  'com.mysql.jdbc.Driver'
+            url: jdbc:mysql://localhost/streama
+            username: root
+            password:
     mysql:
         dataSource:
             dbCreate: update
-            driverClassName:  'com.mysql.cj.jdbc.Driver'
-            url: jdbc:mysql://${mysql_host:192.168.0.183}:${mysql_port:3306}/${mysql_db:pickflix}
-            username: ${mysql_user:csilva}
-            password: ${mysql_password:Password&2020&CS}
+            driverClassName:  'com.mysql.jdbc.Driver'
+            url: jdbc:mysql://${mysql_host:localhost}:${mysql_port:3306}/${mysql_db:streama}
+            username: ${mysql_user:streama}
+            password: ${mysql_password:streama}
     test:
         dataSource:
             dbCreate: update
@@ -34,10 +34,9 @@ environments:
     production:
         dataSource:
             dbCreate: update
-            driverClassName:  'com.mysql.cj.jdbc.Driver'
-            url: jdbc:mysql://192.168.0.183/pickflix
-            username: csilva
-            password: Password&2020&CS
+            url: jdbc:h2:./streama;MVCC=TRUE;LOCK_TIMEOUT=10000;DB_CLOSE_ON_EXIT=FALSE
+            username: root
+            password:
             properties:
                 jmxEnabled: true
                 initialSize: 5
@@ -153,9 +152,11 @@ grails:
 
 streama:
   regex:
-    movies: ^(?<Name>[^\(\[]*)?[._ \(\[]+(?<Year>\d{4}).*
+    movies: ^([\(\[]+[^\)\]]*[\)\]]+)?(?<Name>[^\(\[]*)?[._ \(\[]+(?<Year>\d{4})[^pk].*
     shows:
-      - ^(?<Name>.+)[._ ][Ss](?<Season>\d{2})[Ee](?<Episode>\d{2,3}).*      # example:  "House.MD.S03E04.h264.mp4"
+      - ^(?<Name>.+)[._ ](?<Year>\d{4})[._ ][Ss](?<Season>\d{2})\.?[Ee](?<Episode>\d{2,3}).*      # example:  "House.MD.2008.S03E04.h264.mp4"
+      - ^(?<Name>.+)[._ ][Ss](?<Season>\d{2})\.?[Ee](?<Episode>\d{2,3}).*      # example:  "House.MD.S03E04.h264.mp4"
+      - ^(?<Name>.+)[._ ](?<Year>\d{4})[._ ](?<Season>\d{1,2})x(?<Episode>\d{2,3}).*           # example:  "House.MD.2008.03x04.h264.mp4"
       - ^(?<Name>.+)[._ ](?<Season>\d{1,2})x(?<Episode>\d{2,3}).*           # example:  "House.MD.03x04.h264.mp4"
       - ^(?<Season>\d{2})-(?<Episode>\d{2,3})-(?<Name>.*?)-.*               # example:  "02-05-Dr. House-Tanz_ums_Feuer-cineonws.mp4"
       - ^(?<Name>.*?)(?<Episode>\d{1,3})x(?<Season>\d{2}).*                 # example:  "Castle4x06DaemonsWebdl480pOktober242011rC.mkv(jkuzt).mp4"
@@ -171,3 +172,29 @@ server:
 
 grails.controllers.upload.maxFileSize: 10000000000000 # 10TB
 grails.controllers.upload.maxRequestSize: 10000000000000 # 10TB
+
+grails.plugin.springsecurity.providerNames:
+    - daoAuthenticationProvider
+    - ldapAuthProvider
+    - anonymousAuthenticationProvider
+    - rememberMeAuthenticationProvider
+
+# Uncomment and update the below to configure LDAP authentication
+# http://grails-plugins.github.io/grails-spring-security-ldap/v3/index.html 
+#grails.plugin.springsecurity.ldap:
+#    context:
+#        managerDn: 'ldap'
+#        managerPassword: '[password]'
+#        server: 'ldap://[server]'
+#    search:
+#        base: 'dc=example,dc=com'
+#        filter: 'sAMAccountName={0}'
+#        searchSubtree: true
+#        attributesToReturn: ['mail', 'displayName']
+#    auth:
+#        hideUserNotFoundExceptions: false
+#    useRememberMe: false
+#    authorities:
+#        ignorePartialResultException: true
+#        retrieveDatabaseRoles: false
+#        retrieveGroupRoles: false
