--- a/build.gradle
+++ b/build.gradle
@@ -158,5 +158,9 @@ bootRun {
 grails {
   pathingJar = true
 }
-task stage(dependsOn: 'bootJar') {
+task copyToLib(type: Copy) {
+    into "$buildDir/libs"
+    from(configurations.compile)
 }
+
+stage.dependsOn(copyToLib)
