--- a/build.gradle
+++ b/build.gradle
@@ -158,9 +158,5 @@ bootRun {
 grails {
   pathingJar = true
 }
-task copyToLib(type: Copy) {
-    into "$buildDir/libs"
-    from(configurations.compile)
-}
-
-stage.dependsOn(copyToLib)
+task stage(dependsOn: ['build', 'clean'])
+build.mustRunAfter clean
